--- a/RehabilitationEquipmentUserApp/app/src/main/res/values/strings.xml
+++ b/RehabilitationEquipmentUserApp/app/src/main/res/values/strings.xml
@@ -4,21 +4,25 @@
     <string name="current_status">Current Status</string>
 
     <string name="id_label">Name:</string>
-    <string name="type_label">Body part focus:</string>
-    <string name="battery_status_label">Duration:</string>
-    <string name="status_label">Exercise mode:</string>
-    <string name="power_consumption_label">Intensity:</string>
+    <string name="body_part_focus_label">Body part focus:</string>
+    <string name="duration_label">Duration:</string>
+    <string name="exercise_mode_label">Exercise mode:</string>
+    <string name="intensity_label">Intensity:</string>
     <string name="operating_temperature_label">Operating temperature:</string>
     <string name="runtime_hours_label">Id supervisor:</string>
     <string name="heart_rate_label">Heart rate:</string>
     <string name="blood_pressure_label">Comments:</string>
     <string name="oxygen_saturation_label">Oxygen saturation:</string>
     <string name="users_health_label">User\'s Health:</string>
+    <string name="rehabilitation_equipment_label">Rehabilitation equipment id:</string>
 
     <string name="prompt_select_option">Select option</string>
     <string name="hint">Type something here</string>
     <string name="save">Save</string>
+    <string name="edit">Edit</string>
+    <string name="status">Status</string>
     <string name="title_simulation_activity">Simulation Session</string>
+    <string name="title_status_activity">Status Session</string>
 
     <string name="back4app_app_id">b3gsEpZbEgg5WnqWGTTFoTxSY3UxUy6cI0aLBXNj</string>
     <string name="back4app_client_key">RI8zcUg4XLndL5eGB7RDtbmiay7D4HIYRQQvL9h3</string>
